# open-table-formats-labs

./: .gitignore  README.md  compose.yaml  pyproject.toml
conf/: Untitled.ipynb
datahub/: hudi-hive-demo.ipynb  spark-connect-datahub.ipynb  spark-datahub.ipynb
datahub/metastore_db/: db.lck  service.properties
datahub/output.csv/: .part-00000-68f4458f-cc9a-41d2-85cf-0c74c81bc09f-c000.csv.crc  part-00000-68f4458f-cc9a-41d2-85cf-0c74c81bc09f-c000.csv
datahub/output_v2/: .part-00000-85cafabd-0956-49c2-9ac0-473509be4656-c000.snappy.parquet.crc  part-00000-85cafabd-0956-49c2-9ac0-473509be4656-c000.snappy.parquet
notebooks/incremental/: delta-hive-demo.ipynb  hudi-hive-demo.ipynb  iceberg-hive-demo.ipynb  incremental-delta-without-hive-demo-s3.ipynb  incremental-delta-without-hive-demo.ipynb  incremental-hudi-without-hive-demo-s3.ipynb  incremental-hudi-without-hive-demo.ipynb  incremental-iceberg-without-hive-demo-s3.ipynb  incremental-iceberg-without-hive-demo.ipynb
notebooks/warehouse/delta.db/accounts/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc
ranger/: hudi-hive-demo.ipynb
xtable/: README.md  catalog.yml  xtable-exploration.ipynb
xtable/manifests/: config.yml  hello-world.yml
xtable/warehouse/hudi.db/accounts/.hoodie/: .20250114162008677.commit.crc  .20250114162008677.inflight.crc  .20250114172504047.commit.crc  .20250114172504047.inflight.crc  .hoodie.properties.crc  20250114162008677.commit  20250114162008677.inflight  20250114172504047.commit  20250114172504047.inflight  hoodie.properties
(+353 files in other folders)
